create install/uninstall script